[gd_scene load_steps=56 format=2]

[ext_resource path="res://Shaders/Edge_Motion_Mix.shader" type="Shader" id=1]
[ext_resource path="res://Shaders/Invert.shader" type="Shader" id=2]
[ext_resource path="res://Shaders/Monochrome_Filter.shader" type="Shader" id=3]
[ext_resource path="res://Shaders/Noise.shader" type="Shader" id=4]
[ext_resource path="res://Shaders/Pixelize.shader" type="Shader" id=5]
[ext_resource path="res://Shaders/Mirage.shader" type="Shader" id=6]
[ext_resource path="res://images/gratisography-260H.png" type="Texture" id=7]
[ext_resource path="res://Shaders/Mosic_Simple.shader" type="Shader" id=8]
[ext_resource path="res://Shaders/Binary_Default_Mix.shader" type="Shader" id=9]
[ext_resource path="res://Shaders/BinaryConversion.shader" type="Shader" id=10]
[ext_resource path="res://Shaders/Edge_Prewitt.shader" type="Shader" id=11]
[ext_resource path="res://Shaders/Sepia.shader" type="Shader" id=12]
[ext_resource path="res://Shaders/Whirl.shader" type="Shader" id=13]
[ext_resource path="res://Shaders/Background.shader" type="Shader" id=14]
[ext_resource path="res://Shaders/Negative.shader" type="Shader" id=15]
[ext_resource path="res://Shaders/Edge_Default_Mix.shader" type="Shader" id=16]
[ext_resource path="res://Shaders/Default.shader" type="Shader" id=17]
[ext_resource path="res://Shaders/Aberration.shader" type="Shader" id=18]
[ext_resource path="res://Shaders/Motion.shader" type="Shader" id=19]
[ext_resource path="res://Shaders/Mosic.shader" type="Shader" id=20]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=21]
[ext_resource path="res://Node2D.gd" type="Script" id=22]
[ext_resource path="res://Shaders/Average.shader" type="Shader" id=23]
[ext_resource path="res://Shaders/Gaussian.shader" type="Shader" id=37]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 18 )
shader_param/_amount = 0.55
shader_param/_centerFade = 0.154
shader_param/_aberrationCenter = Vector2( 0.5, 0.5 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 23 )
shader_param/_size = 10.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 14 )
shader_param/_rot = Transform2D( 0.5, -0.86, 0.86, 0.5, 0, 0 )
shader_param/_speed = 1.1
shader_param/_gradation = 0.5

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 10 )
shader_param/_threshold = 1.0

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 17 )
shader_param/_size = 3.0

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 11 )
shader_param/_size = 10.0
shader_param/_threshold = 16.0

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 37 )
shader_param/_size = 5.0

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 2 )

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 6 )
shader_param/_frequency = 60.0
shader_param/_depth = 5.0

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 3 )
shader_param/_base = Color( 1, 1, 1, 1 )
shader_param/_red = 0.3333
shader_param/_green = 0.3333
shader_param/_blue = 0.3333

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 8 )
shader_param/_size = 10.0

[sub_resource type="ShaderMaterial" id=12]
shader = ExtResource( 20 )
shader_param/_size = 10.0

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 19 )
shader_param/_size = 10.0

[sub_resource type="ShaderMaterial" id=14]
shader = ExtResource( 15 )

[sub_resource type="ShaderMaterial" id=15]
shader = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=16]
shader = ExtResource( 5 )
shader_param/_size_x = 10.0
shader_param/_size_y = 10.0

[sub_resource type="ShaderMaterial" id=17]
shader = ExtResource( 12 )
shader_param/_red = 0.3
shader_param/_green = 0.6
shader_param/_blue = 0.1
shader_param/_darkness = 0.04
shader_param/_offset = 0.05

[sub_resource type="ShaderMaterial" id=18]
shader = ExtResource( 13 )
shader_param/_rotation = 3.0

[sub_resource type="ShaderMaterial" id=19]
shader = ExtResource( 9 )
shader_param/_threshold = 10.0
shader_param/_line_weight = 0.7
shader_param/_gradation_size = 3.0
shader_param/_weight = 0.7

[sub_resource type="ShaderMaterial" id=20]
shader = ExtResource( 16 )
shader_param/_line_size = 10.0
shader_param/_threshold = 10.0
shader_param/_line_weight = 0.7
shader_param/_gradation_size = 3.0
shader_param/_weight = 0.7

[sub_resource type="ShaderMaterial" id=21]
shader = ExtResource( 1 )
shader_param/_line_size = 10.0
shader_param/_threshold = 10.0
shader_param/_line_weight = 0.5
shader_param/_gradation_size = 20.0
shader_param/_weight = 0.7

[sub_resource type="DynamicFont" id=22]
size = 64
font_data = ExtResource( 21 )

[sub_resource type="DynamicFont" id=23]
size = 48
outline_size = 2
outline_color = Color( 0.992157, 0, 0, 1 )
extra_spacing_top = -15
font_data = ExtResource( 21 )

[sub_resource type="DynamicFont" id=24]
size = 36
font_data = ExtResource( 21 )

[sub_resource type="DynamicFont" id=25]
size = 36
font_data = ExtResource( 21 )

[sub_resource type="DynamicFont" id=26]
size = 36
font_data = ExtResource( 21 )

[sub_resource type="DynamicFont" id=27]
size = 36
font_data = ExtResource( 21 )

[sub_resource type="DynamicFont" id=28]
size = 36
font_data = ExtResource( 21 )

[sub_resource type="DynamicFont" id=29]
size = 36
font_data = ExtResource( 21 )

[sub_resource type="DynamicFont" id=30]
size = 32
font_data = ExtResource( 21 )

[sub_resource type="DynamicFont" id=31]
size = 36
font_data = ExtResource( 21 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 22 )

[node name="TextureRect" type="TextureRect" parent="."]
rect_min_size = Vector2( 1200, 800 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect_Aberration" type="ColorRect" parent="TextureRect"]
visible = false
material = SubResource( 1 )
margin_left = 100.0
margin_top = 100.0
margin_right = 1000.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect_Average" type="ColorRect" parent="TextureRect"]
visible = false
material = SubResource( 2 )
margin_left = 50.0
margin_top = 50.0
margin_right = 1000.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect_Background" type="ColorRect" parent="TextureRect"]
visible = false
material = SubResource( 3 )
margin_left = 50.0
margin_top = 50.0
margin_right = 800.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect_BinaryConv" type="ColorRect" parent="TextureRect"]
visible = false
material = SubResource( 4 )
margin_left = 200.0
margin_top = 200.0
margin_right = 900.0
margin_bottom = 700.0

[node name="ColorRect_Default" type="ColorRect" parent="TextureRect"]
visible = false
material = SubResource( 5 )
margin_left = 100.0
margin_top = 100.0
margin_right = 1100.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect_Edge" type="ColorRect" parent="TextureRect"]
visible = false
material = SubResource( 6 )
margin_left = 100.0
margin_top = 100.0
margin_right = 1100.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect_Gaussian" type="ColorRect" parent="TextureRect"]
visible = false
material = SubResource( 7 )
margin_left = 100.0
margin_top = 100.0
margin_right = 1100.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect_Invert" type="ColorRect" parent="TextureRect"]
visible = false
material = SubResource( 8 )
margin_left = 200.0
margin_top = 100.0
margin_right = 800.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect_Mirage" type="ColorRect" parent="TextureRect"]
visible = false
material = SubResource( 9 )
margin_left = 100.0
margin_top = 100.0
margin_right = 800.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect_Monochrome" type="ColorRect" parent="TextureRect"]
visible = false
material = SubResource( 10 )
margin_left = 200.0
margin_top = 100.0
margin_right = 900.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect_Mosic_Simple" type="ColorRect" parent="TextureRect"]
visible = false
material = SubResource( 11 )
margin_left = 100.0
margin_top = 50.0
margin_right = 1100.0
margin_bottom = 750.0

[node name="ColorRect_Mosic" type="ColorRect" parent="TextureRect"]
visible = false
material = SubResource( 12 )
margin_left = 50.0
margin_top = 100.0
margin_right = 1100.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect_Motion" type="ColorRect" parent="TextureRect"]
visible = false
material = SubResource( 13 )
margin_left = 100.0
margin_top = 100.0
margin_right = 1000.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect_Negative" type="ColorRect" parent="TextureRect"]
visible = false
material = SubResource( 14 )
margin_left = 50.0
margin_top = 50.0
margin_right = 1000.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect_Noise" type="ColorRect" parent="TextureRect"]
visible = false
material = SubResource( 15 )
margin_left = 200.0
margin_top = 200.0
margin_right = 1000.0
margin_bottom = 600.0

[node name="ColorRect_Pixcelize" type="ColorRect" parent="TextureRect"]
visible = false
material = SubResource( 16 )
margin_left = 100.0
margin_top = 100.0
margin_right = 900.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect_Sepia" type="ColorRect" parent="TextureRect"]
visible = false
material = SubResource( 17 )
margin_left = 200.0
margin_top = 200.0
margin_right = 1000.0
margin_bottom = 600.0

[node name="ColorRect_Whirl" type="ColorRect" parent="TextureRect"]
visible = false
material = SubResource( 18 )
margin_left = 200.0
margin_top = 200.0
margin_right = 1000.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect_Binary+Default" type="ColorRect" parent="TextureRect"]
visible = false
material = SubResource( 19 )
margin_left = 100.0
margin_top = 100.0
margin_right = 1100.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect_Edge+Default" type="ColorRect" parent="TextureRect"]
visible = false
material = SubResource( 20 )
margin_left = 100.0
margin_top = 100.0
margin_right = 900.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect_Edge+Motion" type="ColorRect" parent="TextureRect"]
material = SubResource( 21 )
margin_left = 100.0
margin_top = 100.0
margin_right = 1000.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 228.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 22 )
text = "MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -536.5
margin_top = -262.0
margin_right = 536.5
margin_bottom = 262.0
custom_fonts/title_font = SubResource( 23 )
window_title = "Select the Shaders"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -515.0
margin_top = -242.0
margin_right = 515.0
margin_bottom = 242.0
custom_constants/vseparation = 12
custom_constants/hseparation = 20
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="WindowDialog/GridContainer"]
margin_right = 279.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 24 )
text = "Aberration"

[node name="Button2" type="Button" parent="WindowDialog/GridContainer"]
margin_left = 299.0
margin_right = 723.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 25 )
text = "Average"

[node name="Button3" type="Button" parent="WindowDialog/GridContainer"]
margin_left = 743.0
margin_right = 1030.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 26 )
text = "Background"

[node name="Button4" type="Button" parent="WindowDialog/GridContainer"]
margin_top = 62.0
margin_right = 279.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 27 )
text = "Binary"

[node name="Button5" type="Button" parent="WindowDialog/GridContainer"]
margin_left = 299.0
margin_top = 62.0
margin_right = 723.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 28 )
text = "Default(GLES3)"

[node name="Button6" type="Button" parent="WindowDialog/GridContainer"]
margin_left = 743.0
margin_top = 62.0
margin_right = 1030.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 29 )
text = "Edge"

[node name="Button7" type="Button" parent="WindowDialog/GridContainer"]
margin_top = 124.0
margin_right = 279.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 29 )
text = "Gaussian"

[node name="Button8" type="Button" parent="WindowDialog/GridContainer"]
margin_left = 299.0
margin_top = 124.0
margin_right = 723.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 29 )
text = "Invert"

[node name="Button9" type="Button" parent="WindowDialog/GridContainer"]
margin_left = 743.0
margin_top = 124.0
margin_right = 1030.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 29 )
text = "Mirage"

[node name="Button10" type="Button" parent="WindowDialog/GridContainer"]
margin_top = 186.0
margin_right = 279.0
margin_bottom = 236.0
custom_fonts/font = SubResource( 29 )
text = "Monochrome"

[node name="Button11" type="Button" parent="WindowDialog/GridContainer"]
margin_left = 299.0
margin_top = 186.0
margin_right = 723.0
margin_bottom = 236.0
custom_fonts/font = SubResource( 29 )
text = "Mosic Simple(GLES3)"

[node name="Button12" type="Button" parent="WindowDialog/GridContainer"]
margin_left = 743.0
margin_top = 186.0
margin_right = 1030.0
margin_bottom = 236.0
custom_fonts/font = SubResource( 29 )
text = "Mosic(GLES3)"

[node name="Button13" type="Button" parent="WindowDialog/GridContainer"]
margin_top = 248.0
margin_right = 279.0
margin_bottom = 298.0
custom_fonts/font = SubResource( 29 )
text = "Motion"

[node name="Button14" type="Button" parent="WindowDialog/GridContainer"]
margin_left = 299.0
margin_top = 248.0
margin_right = 723.0
margin_bottom = 298.0
custom_fonts/font = SubResource( 29 )
text = "Negative"

[node name="Button15" type="Button" parent="WindowDialog/GridContainer"]
margin_left = 743.0
margin_top = 248.0
margin_right = 1030.0
margin_bottom = 298.0
custom_fonts/font = SubResource( 29 )
text = "Noise"

[node name="Button16" type="Button" parent="WindowDialog/GridContainer"]
margin_top = 310.0
margin_right = 279.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 29 )
text = "Pixcelize"

[node name="Button17" type="Button" parent="WindowDialog/GridContainer"]
margin_left = 299.0
margin_top = 310.0
margin_right = 723.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 29 )
text = "Sepia"

[node name="Button18" type="Button" parent="WindowDialog/GridContainer"]
margin_left = 743.0
margin_top = 310.0
margin_right = 1030.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 29 )
text = "Whirl"

[node name="Button19" type="Button" parent="WindowDialog/GridContainer"]
margin_top = 372.0
margin_right = 279.0
margin_bottom = 422.0
custom_fonts/font = SubResource( 29 )
text = "Binary+Defalt"

[node name="Button20" type="Button" parent="WindowDialog/GridContainer"]
margin_left = 299.0
margin_top = 372.0
margin_right = 723.0
margin_bottom = 422.0
custom_fonts/font = SubResource( 29 )
text = "Edge+Defalt"

[node name="Button21" type="Button" parent="WindowDialog/GridContainer"]
margin_left = 743.0
margin_top = 372.0
margin_right = 1030.0
margin_bottom = 422.0
custom_fonts/font = SubResource( 29 )
text = "Edge+Motion"

[node name="Button_CT" type="Button" parent="WindowDialog/GridContainer"]
margin_top = 434.0
margin_right = 279.0
margin_bottom = 484.0
custom_fonts/font = SubResource( 30 )
custom_colors/font_color = Color( 0.780392, 0.988235, 0.0392157, 1 )
text = "Change Texture"

[node name="Button_Dummy" type="Button" parent="WindowDialog/GridContainer"]
margin_left = 299.0
margin_top = 434.0
margin_right = 723.0
margin_bottom = 484.0

[node name="Button_Org" type="Button" parent="WindowDialog/GridContainer"]
margin_left = 743.0
margin_top = 434.0
margin_right = 1030.0
margin_bottom = 484.0
custom_fonts/font = SubResource( 31 )
custom_colors/font_color = Color( 0.505882, 0.972549, 0.0392157, 1 )
text = "No Filters"
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button10" to="." method="_on_Button10_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button11" to="." method="_on_Button11_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button12" to="." method="_on_Button12_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button13" to="." method="_on_Button13_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button14" to="." method="_on_Button14_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button15" to="." method="_on_Button15_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button16" to="." method="_on_Button16_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button17" to="." method="_on_Button17_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button18" to="." method="_on_Button18_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button19" to="." method="_on_Button19_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button20" to="." method="_on_Button20_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button21" to="." method="_on_Button21_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button_CT" to="." method="_on_Button_CT_pressed"]
[connection signal="pressed" from="WindowDialog/GridContainer/Button_Org" to="." method="_on_Button_Org_pressed"]
