extends Node2D


var tex_01 = preload("res://images/gratisography-260H.png")
var tex_02 = preload("res://images/gratisography-326H.png")
var tex_03 = preload("res://images/gratisography-400H.png")
var tex_04 = preload("res://images/_78492-2984.jpg")
var rng = RandomNumberGenerator.new()


func _ready():
	rng.randomize()
	var n =  rng.randi_range(0, 4)
	if (n > 3):
		get_node("TextureRect").texture = tex_01
	elif (n > 2):
		get_node("TextureRect").texture = tex_02
	elif (n > 1):
		get_node("TextureRect").texture = tex_03
	else:
		get_node("TextureRect").texture = tex_04
	$TextureRect.show()
	$Button.show()
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".hide()



#func _process(delta):
#	pass


func _on_Button1_pressed():
	$"TextureRect/ColorRect_Aberration".show()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".hide()
	$WindowDialog.hide()
	

func _on_Button2_pressed():
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".show()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".hide()
	$WindowDialog.hide()


func _on_Button3_pressed():
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".show()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".hide()
	$WindowDialog.hide()


func _on_Button4_pressed():
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".show()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".hide()
	$WindowDialog.hide()


func _on_Button5_pressed():
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".show()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".hide()
	$WindowDialog.hide()


func _on_Button6_pressed():
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".show()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".hide()
	$WindowDialog.hide()


func _on_Button7_pressed():
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".show()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".hide()
	$WindowDialog.hide()


func _on_Button8_pressed():
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".show()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".hide()
	$WindowDialog.hide()


func _on_Button9_pressed():
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".show()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".hide()
	$WindowDialog.hide()


func _on_Button10_pressed():
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".show()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".hide()
	$WindowDialog.hide()


func _on_Button11_pressed():
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".show()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".hide()
	$WindowDialog.hide()


func _on_Button12_pressed():
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".show()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".hide()
	$WindowDialog.hide()


func _on_Button13_pressed():
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".show()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".hide()
	$WindowDialog.hide()


func _on_Button14_pressed():
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".show()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".hide()
	$WindowDialog.hide()


func _on_Button15_pressed():
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".show()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".hide()
	$WindowDialog.hide()


func _on_Button16_pressed():
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".show()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".hide()
	$WindowDialog.hide()


func _on_Button17_pressed():
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".show()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".hide()
	$WindowDialog.hide()


func _on_Button18_pressed():
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".show()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".hide()
	$WindowDialog.hide()


func _on_Button19_pressed():
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".show()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".hide()
	$WindowDialog.hide()


func _on_Button20_pressed():
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".show()
	$"TextureRect/ColorRect_Edge+Motion".hide()
	$WindowDialog.hide()


func _on_Button21_pressed():
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".show()
	$WindowDialog.hide()


func _on_Button_pressed():
	$WindowDialog.show()


func _on_Button_CT_pressed():
	rng.randomize()
	var n =  rng.randi_range(0, 4)
	if (n > 3):
		get_node("TextureRect").texture = tex_01
	elif (n > 2):
		get_node("TextureRect").texture = tex_02
	elif (n > 1):
		get_node("TextureRect").texture = tex_03
	else:
		get_node("TextureRect").texture = tex_04



func _on_Button_Org_pressed():
	$"TextureRect/ColorRect_Aberration".hide()
	$"TextureRect/ColorRect_Average".hide()
	$"TextureRect/ColorRect_Background".hide()
	$"TextureRect/ColorRect_BinaryConv".hide()
	$"TextureRect/ColorRect_Default".hide()
	$"TextureRect/ColorRect_Edge".hide()
	$"TextureRect/ColorRect_Gaussian".hide()
	$"TextureRect/ColorRect_Invert".hide()
	$"TextureRect/ColorRect_Mirage".hide()
	$"TextureRect/ColorRect_Monochrome".hide()
	$"TextureRect/ColorRect_Mosic_Simple".hide()
	$"TextureRect/ColorRect_Mosic".hide()
	$"TextureRect/ColorRect_Motion".hide()
	$"TextureRect/ColorRect_Negative".hide()
	$"TextureRect/ColorRect_Noise".hide()
	$"TextureRect/ColorRect_Pixcelize".hide()
	$"TextureRect/ColorRect_Sepia".hide()
	$"TextureRect/ColorRect_Whirl".hide()
	$"TextureRect/ColorRect_Binary+Default".hide()
	$"TextureRect/ColorRect_Edge+Default".hide()
	$"TextureRect/ColorRect_Edge+Motion".hide()
	$WindowDialog.hide()

